--- a/teachers.html
+++ b/teachers.html
@@ -61,31 +61,33 @@
     <div class="wrap">
         <ul>
             <li><a href="index.html">Главная</a></li>
-            <li class="has-child"><a href="categories.html">Направления
-                    <ul>
-                        <li><a href="category.html">Парикмахерское исскуство</a></li>
-                        <li><a href="category.html">Маникюр</a></li>
-                        <li><a href="category.html">Педикюр</a></li>
-                        <li><a href="category.html">Косметология</a></li>
-                        <li><a href="category.html">Массажист</a></li>
-                        <li><a href="category.html">Визажист</a></li>
-                        <li><a href="category.html">Стилист</a></li>
-                        <li><a href="category.html">Ресницы</a></li>
-                        <li><a href="category.html">Брови</a></li>
-                        <li><a href="category.html">Татуаж</a></li>
-                    </ul></a></li>
-            <li class="has-child"><a href="text.html">Академия
-                    <ul>
-                        <li><a href="text.html">Об академии</a></li>
-                        <li><a href="teachers.html">Преподователи</a></li>
-                        <li><a href="text.html">Льготное обучение</a></li>
-                        <li><a href="text.html">Аттестация</a></li>
-                        <li><a href="reviews.html">Отзывы</a></li>
-                        <li><a href="articles.html">Новости</a></li>
-                        <li><a href="articles.html">Статьи</a></li>
-                        <li><a href="jobs.html">Биржа труда</a></li>
-                        <li><a href="https://shop-mskr.ru">Интернет магазин</a></li>
-                    </ul></a></li>
+            <li class="has-child"><a href="categories.html">Направления</a>
+                <ul>
+                    <li><a href="category.html">Парикмахерское исскуство</a></li>
+                    <li><a href="category.html">Маникюр</a></li>
+                    <li><a href="category.html">Педикюр</a></li>
+                    <li><a href="category.html">Косметология</a></li>
+                    <li><a href="category.html">Массажист</a></li>
+                    <li><a href="category.html">Визажист</a></li>
+                    <li><a href="category.html">Стилист</a></li>
+                    <li><a href="category.html">Ресницы</a></li>
+                    <li><a href="category.html">Брови</a></li>
+                    <li><a href="category.html">Татуаж</a></li>
+                </ul>
+            </li>
+            <li class="has-child"><a href="text.html">Академия</a>
+                <ul>
+                    <li><a href="text.html">Об академии</a></li>
+                    <li><a href="teachers.html">Преподователи</a></li>
+                    <li><a href="text.html">Льготное обучение</a></li>
+                    <li><a href="text.html">Аттестация</a></li>
+                    <li><a href="reviews.html">Отзывы</a></li>
+                    <li><a href="articles.html">Новости</a></li>
+                    <li><a href="articles.html">Статьи</a></li>
+                    <li><a href="jobs.html">Биржа труда</a></li>
+                    <li><a href="https://shop-mskr.ru">Интернет магазин</a></li>
+                </ul>
+            </li>
             <li><a href="contacts.html">Контакты</a></li>
             <li class="online"><a href="https://mskr-online.ru" target="_blanc"><svg xmlns="http://www.w3.org/2000/svg" width="26" height="20" viewBox="0 0 26 20">
   <g id="online" transform="translate(-1275.319 -172.79)">
@@ -116,7 +118,7 @@
         </div>
         <div class="list">
             <div class="card">
-                <div class="preview" style="background-image: url('images/team.webp')"></div>
+                <div class="preview" style="background-image: url('images/teachers/1.webp')"></div>
                 <div class="content"><span>Специалист по массажу</span><strong>Дорохова Елена Николаевна</strong>
                     <p>Многократный участник международных семинаров по парикмахерскому искусству. Призер Чемпионата России по парикмахерскому искусству, маникюру и декоративной косметике -2014 год в номинации «Прогрессивный образ женщины». Член жюри внутреннего конкурса среди учащихся и выпускников УЦ «Мастерская красоты».</p>
                     <div class="merge">
@@ -126,7 +128,7 @@
                 </div>
             </div>
             <div class="card">
-                <div class="preview" style="background-image: url('images/team.webp')"></div>
+                <div class="preview" style="background-image: url('images/teachers/2.webp')"></div>
                 <div class="content"><span>Специалист по массажу</span><strong>Дорохова Елена Николаевна</strong>
                     <p>Многократный участник международных семинаров по парикмахерскому искусству. Призер Чемпионата России по парикмахерскому искусству, маникюру и декоративной косметике -2014 год в номинации «Прогрессивный образ женщины». Член жюри внутреннего конкурса среди учащихся и выпускников УЦ «Мастерская красоты».</p>
                     <div class="merge">
@@ -136,7 +138,7 @@
                 </div>
             </div>
             <div class="card">
-                <div class="preview" style="background-image: url('images/team.webp')"></div>
+                <div class="preview" style="background-image: url('images/teachers/3.webp')"></div>
                 <div class="content"><span>Специалист по массажу</span><strong>Дорохова Елена Николаевна</strong>
                     <p>Многократный участник международных семинаров по парикмахерскому искусству. Призер Чемпионата России по парикмахерскому искусству, маникюру и декоративной косметике -2014 год в номинации «Прогрессивный образ женщины». Член жюри внутреннего конкурса среди учащихся и выпускников УЦ «Мастерская красоты».</p>
                     <div class="merge">
@@ -146,7 +148,7 @@
                 </div>
             </div>
             <div class="card">
-                <div class="preview" style="background-image: url('images/team.webp')"></div>
+                <div class="preview" style="background-image: url('images/teachers/4.webp')"></div>
                 <div class="content"><span>Специалист по массажу</span><strong>Дорохова Елена Николаевна</strong>
                     <p>Многократный участник международных семинаров по парикмахерскому искусству. Призер Чемпионата России по парикмахерскому искусству, маникюру и декоративной косметике -2014 год в номинации «Прогрессивный образ женщины». Член жюри внутреннего конкурса среди учащихся и выпускников УЦ «Мастерская красоты».</p>
                     <div class="merge">
@@ -156,7 +158,7 @@
                 </div>
             </div>
             <div class="card">
-                <div class="preview" style="background-image: url('images/team.webp')"></div>
+                <div class="preview" style="background-image: url('images/teachers/5.webp')"></div>
                 <div class="content"><span>Специалист по массажу</span><strong>Дорохова Елена Николаевна</strong>
                     <p>Многократный участник международных семинаров по парикмахерскому искусству. Призер Чемпионата России по парикмахерскому искусству, маникюру и декоративной косметике -2014 год в номинации «Прогрессивный образ женщины». Член жюри внутреннего конкурса среди учащихся и выпускников УЦ «Мастерская красоты».</p>
                     <div class="merge">
@@ -166,7 +168,7 @@
                 </div>
             </div>
             <div class="card">
-                <div class="preview" style="background-image: url('images/team.webp')"></div>
+                <div class="preview" style="background-image: url('images/teachers/6.webp')"></div>
                 <div class="content"><span>Специалист по массажу</span><strong>Дорохова Елена Николаевна</strong>
                     <p>Многократный участник международных семинаров по парикмахерскому искусству. Призер Чемпионата России по парикмахерскому искусству, маникюру и декоративной косметике -2014 год в номинации «Прогрессивный образ женщины». Член жюри внутреннего конкурса среди учащихся и выпускников УЦ «Мастерская красоты».</p>
                     <div class="merge">
@@ -176,57 +178,7 @@
                 </div>
             </div>
             <div class="card">
-                <div class="preview" style="background-image: url('images/team.webp')"></div>
-                <div class="content"><span>Специалист по массажу</span><strong>Дорохова Елена Николаевна</strong>
-                    <p>Многократный участник международных семинаров по парикмахерскому искусству. Призер Чемпионата России по парикмахерскому искусству, маникюру и декоративной косметике -2014 год в номинации «Прогрессивный образ женщины». Член жюри внутреннего конкурса среди учащихся и выпускников УЦ «Мастерская красоты».</p>
-                    <div class="merge">
-                        <div><span> Опыт работы:</span><strong>8 лет</strong></div>
-                        <div><span> Место работы:</span><strong>Технолог компании Matrix</strong></div>
-                    </div>
-                </div>
-            </div>
-            <div class="card">
-                <div class="preview" style="background-image: url('images/team.webp')"></div>
-                <div class="content"><span>Специалист по массажу</span><strong>Дорохова Елена Николаевна</strong>
-                    <p>Многократный участник международных семинаров по парикмахерскому искусству. Призер Чемпионата России по парикмахерскому искусству, маникюру и декоративной косметике -2014 год в номинации «Прогрессивный образ женщины». Член жюри внутреннего конкурса среди учащихся и выпускников УЦ «Мастерская красоты».</p>
-                    <div class="merge">
-                        <div><span> Опыт работы:</span><strong>8 лет</strong></div>
-                        <div><span> Место работы:</span><strong>Технолог компании Matrix</strong></div>
-                    </div>
-                </div>
-            </div>
-            <div class="card">
-                <div class="preview" style="background-image: url('images/team.webp')"></div>
-                <div class="content"><span>Специалист по массажу</span><strong>Дорохова Елена Николаевна</strong>
-                    <p>Многократный участник международных семинаров по парикмахерскому искусству. Призер Чемпионата России по парикмахерскому искусству, маникюру и декоративной косметике -2014 год в номинации «Прогрессивный образ женщины». Член жюри внутреннего конкурса среди учащихся и выпускников УЦ «Мастерская красоты».</p>
-                    <div class="merge">
-                        <div><span> Опыт работы:</span><strong>8 лет</strong></div>
-                        <div><span> Место работы:</span><strong>Технолог компании Matrix</strong></div>
-                    </div>
-                </div>
-            </div>
-            <div class="card">
-                <div class="preview" style="background-image: url('images/team.webp')"></div>
-                <div class="content"><span>Специалист по массажу</span><strong>Дорохова Елена Николаевна</strong>
-                    <p>Многократный участник международных семинаров по парикмахерскому искусству. Призер Чемпионата России по парикмахерскому искусству, маникюру и декоративной косметике -2014 год в номинации «Прогрессивный образ женщины». Член жюри внутреннего конкурса среди учащихся и выпускников УЦ «Мастерская красоты».</p>
-                    <div class="merge">
-                        <div><span> Опыт работы:</span><strong>8 лет</strong></div>
-                        <div><span> Место работы:</span><strong>Технолог компании Matrix</strong></div>
-                    </div>
-                </div>
-            </div>
-            <div class="card">
-                <div class="preview" style="background-image: url('images/team.webp')"></div>
-                <div class="content"><span>Специалист по массажу</span><strong>Дорохова Елена Николаевна</strong>
-                    <p>Многократный участник международных семинаров по парикмахерскому искусству. Призер Чемпионата России по парикмахерскому искусству, маникюру и декоративной косметике -2014 год в номинации «Прогрессивный образ женщины». Член жюри внутреннего конкурса среди учащихся и выпускников УЦ «Мастерская красоты».</p>
-                    <div class="merge">
-                        <div><span> Опыт работы:</span><strong>8 лет</strong></div>
-                        <div><span> Место работы:</span><strong>Технолог компании Matrix</strong></div>
-                    </div>
-                </div>
-            </div>
-            <div class="card">
-                <div class="preview" style="background-image: url('images/team.webp')"></div>
+                <div class="preview" style="background-image: url('images/teachers/7.webp')"></div>
                 <div class="content"><span>Специалист по массажу</span><strong>Дорохова Елена Николаевна</strong>
                     <p>Многократный участник международных семинаров по парикмахерскому искусству. Призер Чемпионата России по парикмахерскому искусству, маникюру и декоративной косметике -2014 год в номинации «Прогрессивный образ женщины». Член жюри внутреннего конкурса среди учащихся и выпускников УЦ «Мастерская красоты».</p>
                     <div class="merge">
