--- a/articles.html
+++ b/articles.html
@@ -61,31 +61,33 @@
     <div class="wrap">
         <ul>
             <li><a href="index.html">Главная</a></li>
-            <li class="has-child"><a href="categories.html">Направления
-                    <ul>
-                        <li><a href="category.html">Парикмахерское исскуство</a></li>
-                        <li><a href="category.html">Маникюр</a></li>
-                        <li><a href="category.html">Педикюр</a></li>
-                        <li><a href="category.html">Косметология</a></li>
-                        <li><a href="category.html">Массажист</a></li>
-                        <li><a href="category.html">Визажист</a></li>
-                        <li><a href="category.html">Стилист</a></li>
-                        <li><a href="category.html">Ресницы</a></li>
-                        <li><a href="category.html">Брови</a></li>
-                        <li><a href="category.html">Татуаж</a></li>
-                    </ul></a></li>
-            <li class="has-child"><a href="text.html">Академия
-                    <ul>
-                        <li><a href="text.html">Об академии</a></li>
-                        <li><a href="teachers.html">Преподователи</a></li>
-                        <li><a href="text.html">Льготное обучение</a></li>
-                        <li><a href="text.html">Аттестация</a></li>
-                        <li><a href="reviews.html">Отзывы</a></li>
-                        <li><a href="articles.html">Новости</a></li>
-                        <li><a href="articles.html">Статьи</a></li>
-                        <li><a href="jobs.html">Биржа труда</a></li>
-                        <li><a href="https://shop-mskr.ru">Интернет магазин</a></li>
-                    </ul></a></li>
+            <li class="has-child"><a href="categories.html">Направления</a>
+                <ul>
+                    <li><a href="category.html">Парикмахерское исскуство</a></li>
+                    <li><a href="category.html">Маникюр</a></li>
+                    <li><a href="category.html">Педикюр</a></li>
+                    <li><a href="category.html">Косметология</a></li>
+                    <li><a href="category.html">Массажист</a></li>
+                    <li><a href="category.html">Визажист</a></li>
+                    <li><a href="category.html">Стилист</a></li>
+                    <li><a href="category.html">Ресницы</a></li>
+                    <li><a href="category.html">Брови</a></li>
+                    <li><a href="category.html">Татуаж</a></li>
+                </ul>
+            </li>
+            <li class="has-child"><a href="text.html">Академия</a>
+                <ul>
+                    <li><a href="text.html">Об академии</a></li>
+                    <li><a href="teachers.html">Преподователи</a></li>
+                    <li><a href="text.html">Льготное обучение</a></li>
+                    <li><a href="text.html">Аттестация</a></li>
+                    <li><a href="reviews.html">Отзывы</a></li>
+                    <li><a href="articles.html">Новости</a></li>
+                    <li><a href="articles.html">Статьи</a></li>
+                    <li><a href="jobs.html">Биржа труда</a></li>
+                    <li><a href="https://shop-mskr.ru">Интернет магазин</a></li>
+                </ul>
+            </li>
             <li><a href="contacts.html">Контакты</a></li>
             <li class="online"><a href="https://mskr-online.ru" target="_blanc"><svg xmlns="http://www.w3.org/2000/svg" width="26" height="20" viewBox="0 0 26 20">
   <g id="online" transform="translate(-1275.319 -172.79)">
